--- a/views/about.ejs
+++ b/views/about.ejs
@@ -112,7 +112,7 @@
             <!-- 標題 -->
 
             <div class="col-md-12">
-                <h1 class="header2">獵人名單</h1>
+                <h1 class="header2 text-center">獵人名單</h1>
             </div>
 
             <!-- 設計、科技連結 -->
@@ -301,7 +301,7 @@
             <!-- 標題 -->
 
             <div class="col">
-                <h1 class="header2">聯絡我們</h1>
+                <h1 class="header2 text-center">聯絡我們</h1>
             </div>
 
             <!-- 內容 -->
