--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -97,75 +97,46 @@
 
     <!-- 活動資訊 -->
 
-    <div class="container">
+    <div class="container margin_y">
+
+        <!-- 活動 - OK 蹦 QRcode-->
+
+        <div class="banner">
+            OK 蹦 QRcode 活動相關照片
+        </div>
         <div class="card">
-            <div class="row">
-                <div class="banner">
-                    活動相關照片
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title">
-                        <span class="act_title">大型 QRcode</span>
-                    </h1>
-                    <p class="card-text">
-                        活動時間：
-                        <span class="act_date">3/1 至 3/31</span>
-                    </p>
-                    <p class="card-text">
-                        活動地點：
-                        <span class="act_date">五館一樓閱覽室前的空地</span>
-                    </p>
-                    <p class="card-text">
-                        活動內容：<br>
-                        <span class="act_txt">
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                        </span>
-                    </p>
-
-
-                </div>
-            </div>
+            <div class="card-body">
+                <h1 class="card-title header2">OK 蹦 QRcode</h1>
+                <p class="card-text text3">
+                    活動時間：3/1 至 3/31 活動地點：五館一樓閱覽室前的空地
+                </p>
+                <p class="card-text text3">
+                    藉由ok蹦造型的貼紙貼在校園各處吸引大家的關注，
+                    可掃描ok蹦中的QRcode觀看宣傳片，並且以文字雲的方式呈現QRcod，
+                    文字以厭世相關的句子來引起大學生的共鳴。
+                </p>
+            </div>    
         </div>
 
-        <div class="card">
-            <div class="row">
-                
-                <div class="banner">
-                    活動相關照片
-                </div>
+        <!-- 活動 - 排行榜 -->
 
-                <div class="card-body">
-                    <h1 class="card-title">
-                        <span class="act_title">排行榜</span>
-                    </h1>
-                    <p class="card-text">
-                        活動時間：
-                        <span class="act_date">5/12 至 5/15</span>
-                    </p>
-                    <p class="card-text">
-                        活動地點：
-                        <span class="act_date">松菸展場攤位</span>
-                    </p>
-                    <p class="card-text">
-                        活動內容：<br>
-                        <span class="act_txt">
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
-                        </span>
-                    </p>
-
-
-                </div>
-            </div>
+        <div class="banner">
+            排行榜活動相關照片
         </div>
-
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title header2">排行榜</h1>
+                <p class="card-text text3">
+                    活動時間：5/12 至 5/15 活動地點：松菸展場攤位
+                </p>
+                <p class="card-text text3">
+                    每組有專屬於自己的代表物作為投票標記之物，
+                    觀展人可獲得OK蹦貼紙，貼在自己喜歡組別的代表物上，
+                    在展期結束時，挑選出三組最佳人氣王，
+                    分別頒發此三組人氣王獎金。
+                </p>
+            </div>    
+        </div>
     </div>
 
     <!-- footer -->
