--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -44,6 +44,11 @@
 .text2{
     font-size: 16px;
 }
+/*  */
+.text3{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
 
 /*--------- navbar ----------*/
 
