--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -99,7 +99,28 @@
 
     <!-- gaming -->
     <div class="container">
-        <div class="works">
+
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body text-end">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                    <p class="card-text">遊戲組</p>
+
+                    <h1 class="card-title">降妖錄</h1>
+
+
+                    <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="works">
             <div class="card">
                 <div class="row">
                     <div class="col">
@@ -155,7 +176,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- 了解詳情 -->
         <div class="works_content">
