--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -98,23 +98,23 @@
     </nav>
 
     <!-- gaming -->
-    <div class="container">
+    <div class="container margin_y">
 
         <div class="card mb-3">
             <div class="row g-0">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <img src="../media/predictor.jpg" alt="...">
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body text-end">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                    <p class="card-text">遊戲組</p>
+                <div class="col-md-6 card_content">
+                    <div class="card-body">
 
-                    <h1 class="card-title">降妖錄</h1>
+                        <p class="card-text text3">成長 Tone</p>
+                        <p class="card-text text3">遊戲組</p>
 
+                        <h5 class="card-title header1">古嶺奇譚</h5>
+                        
 
-                    <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        <a href="#" class="btn btn-primary btn_More">了解詳情</a>
                     </div>
                 </div>
             </div>
