--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1,6 +1,6 @@
 .card{
     padding: 40px;
-    height: 520px;
+    /* height: 520px; */
     /* 垂直置中 */
     justify-content: center;    
   
@@ -9,11 +9,22 @@
     margin: 0px;
 }
 
+@media screen and (max-width:768px) {
+    .col-md-6{
+        text-align: center;
+    }
+}
+@media screen and (min-width:768px) {
+    .card_content{
+        text-align: right;
+    }
+}
+
 .card-text{
-    margin: 0 0 10px;
+    /* margin: 0 0 10px; */
 }
 .card-title{
-    margin: 40px 0 40px;
+    /* margin: 40px 0 40px; */
 }
 
 
