--- a/views/news.ejs
+++ b/views/news.ejs
@@ -192,7 +192,7 @@
         <!-- 一般消息內文 --> 
         <!-- 小 modal-sm 大 modal-lg 全螢幕 fullscreen -->
         <div class="modal fade" id="news_content" tabindex="-1" aria-labelledby="news_contentLabel" aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen"> 
+            <div class="modal-dialog"> 
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="news_contentLabel">一般消息標題</h1>
