--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -98,89 +98,111 @@
     </nav>
 
     <!-- gaming -->
-    <div class="container margin_y">
+    <div class="container container_content margin_y">
 
-        <div class="card mb-3">
-            <div class="row g-0">
-                <div class="col-md-6">
-                    <img src="../media/predictor.jpg" alt="...">
-                </div>
-                <div class="col-md-6 card_content">
-                    <div class="card-body">
+        <!-- 遊戲組作品 -->
 
-                        <p class="card-text text3">成長 Tone</p>
-                        <p class="card-text text3">遊戲組</p>
+        <div class="works">
+            <!-- 遊戲組 - 古嶺奇譚 -->
+            <div class="card mb-3">
+                <div class="row g-0">
 
-                        <h5 class="card-title header1">古嶺奇譚</h5>
-                        
-
-                        <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                    <div class="col-md-6 card_imgL">
+                        <img src="../media/predictor.jpg" alt="...">
                     </div>
+
+                    <div class="col-md-6 card_contentR">
+                        <div class="card-body">
+
+                            <p class="card-text text3">成長 Tone</p>
+                            <p class="card-text text3">遊戲組</p>
+
+                            <h5 class="card-title header1">古嶺奇譚</h5>
+                            
+
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- 遊戲組 - 血墨契約 -->
+            <div class="card mb-3">
+                <div class="row g-0">
+
+                    <div class="col-md-6 card_imgL">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+
+                    <div class="col-md-6 card_contentR">
+                        <div class="card-body">
+
+                            <p class="card-text text3">成長 Tone</p>
+                            <p class="card-text text3">遊戲組</p>
+
+                            <h5 class="card-title header1">血墨契約</h5>
+                            
+
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        </div>
+                    </div>
+                    
+                    
+                </div>
+            </div>
+            <!-- 遊戲組 - Raise -->
+            <div class="card mb-3">
+                <div class="row g-0">
+
+                    <div class="col-md-6 card_imgL">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+
+                    <div class="col-md-6 card_contentR">
+                        <div class="card-body">
+
+                            <p class="card-text text3">成長 Tone</p>
+                            <p class="card-text text3">遊戲組</p>
+
+                            <h5 class="card-title header1">Raise</h5>
+                            
+
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        </div>
+                    </div>
+                    
+                    
+                </div>
+            </div>
+            <!-- 遊戲組 - Raise -->
+            <div class="card mb-3">
+                <div class="row g-0">
+
+                    <div class="col-md-6 card_imgL">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+
+                    <div class="col-md-6 card_contentR">
+                        <div class="card-body">
+
+                            <p class="card-text text3">成長 Tone</p>
+                            <p class="card-text text3">遊戲組</p>
+
+                            <h5 class="card-title header1">Raise</h5>
+                            
+
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
             </div>
         </div>
 
-        <!-- <div class="works">
-            <div class="card">
-                <div class="row">
-                    <div class="col">
-                        <img src="../media/predictor.jpg" alt="...">
-                    </div>
-                    <div class="col">
-                        <div class="card-body text-end">
-                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                            <p class="card-text">遊戲組</p>
-
-                            <h1 class="card-title">降妖錄</h1>
-
-
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card-body">
-                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                            <p class="card-text">遊戲組</p>
-
-                            <h1 class="card-title">血墨契約</h1>
-
-
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 text-end">
-                        <img src="../media/predictor.jpg" alt="...">
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col">
-                        <img src="../media/predictor.jpg" alt="...">
-                    </div>
-                    <div class="col">
-                        <div class="card-body text-end">
-                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                            <p class="card-text">遊戲組</p>
-
-                            <h1 class="card-title title_right">Raise</h1>
-
-
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
         <!-- 了解詳情 -->
         <div class="works_content">
-            <button type="button" class="btn btn-outline-secondary btn_back">回上一頁</button>
+            <button type="button" class="btn btn-outline-secondary btn_back text3_2">回上一頁</button>
 
             <!-- 圖片輪播 -->
             <div id="gaming_carousel" class="carousel slide" data-bs-ride="carousel">
@@ -216,26 +238,26 @@
             </div>
 
             <div class="card">
-                <div class="row">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                         <div class="card-body">
-                            <p class="card-text">遊戲組</p>
+                            <!-- <p class="card-text">遊戲組</p> -->
 
-                            <h1 class="card-title content_title"></h1>
+                            <h1 class="card-title content_title header1"></h1>
 
-                            <p class="card-text">
-                                團隊名稱：<span class="content_teams"></span>
+                            <p class="card-text text1_2 content_teams">
+                                <!-- 團隊名稱：<span class="content_teams"></span> -->
                             </p>
-                            <p class="card-text">
+                            <p class="card-text text3_2">
                                 團隊成員：<br>
                                 <span class="content_member"></span>
                             </p>
 
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col txt_center">
                         <div class="card-body">
-                            <p class="card-text content_txt">
+                            <p class="card-text content_txt text3_2">
                                 
                             </p>
                         </div>
@@ -248,17 +270,12 @@
 
     </div>
 
-
-
-
-
-
     <!-- footer -->
 
     <hr>
 
-    <div class="container">
-        <div class="row footer">
+    <div class="container margin_y">
+        <div class="row align-items-center text-center">
             <div class="col">
                 <p>
                     指導單位：<br>元智大學資訊學院
