--- a/views/news.ejs
+++ b/views/news.ejs
@@ -217,8 +217,8 @@
 
     <hr>
 
-    <div class="container">
-        <div class="row footer">
+    <div class="container margin_y">
+        <div class="row align-items-center text-center">
             <div class="col">
                 <p>
                     指導單位：<br>元智大學資訊學院
