--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -120,7 +120,9 @@
                             <h5 class="card-title header1">古嶺奇譚</h5>
                             
 
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                            <button type="button" class="btn btn-outline-secondary btn_More text3_2">
+                                <span>了解詳情</span> 
+                            </button>
                         </div>
                     </div>
 
@@ -143,7 +145,9 @@
                             <h5 class="card-title header1">血墨契約</h5>
                             
 
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                            <button type="button" class="btn btn-outline-secondary btn_More text3_2">
+                                <span>了解詳情</span> 
+                            </button>
                         </div>
                     </div>
                     
@@ -167,7 +171,9 @@
                             <h5 class="card-title header1">Raise</h5>
                             
 
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                            <button type="button" class="btn btn-outline-secondary btn_More text3_2">
+                                <span>了解詳情</span> 
+                            </button>
                         </div>
                     </div>
                     
@@ -190,8 +196,9 @@
 
                             <h5 class="card-title header1">Raise</h5>
                             
-
-                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                            <button type="button" class="btn btn-outline-secondary btn_More text3_2">
+                                <span>了解詳情</span> 
+                            </button>
                         </div>
                     </div>
                     
