--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -43,3 +43,12 @@
     justify-content: center;
     align-items: center;
 }
+
+.btn{
+    width: 200px;
+    height: 60px;   
+    /* 垂直置中 */
+    align-items: center;
+    /* background-color: aliceblue;
+    color: black; */
+}
