--- a/views/about.ejs
+++ b/views/about.ejs
@@ -100,8 +100,8 @@
         <!-- banner 畢籌大合照 -->
 
         <div class="row">
-            <div class="col banner">
-                畢籌會大合照
+            <div class="col-md-12 banner">
+                <img src="../media/banner/act_leaderboard.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
             </div>
         </div>
 
@@ -244,7 +244,7 @@
             <!-- 贊助商LOGO -->
             <div class="row row-cols-1 row-cols-md-6">
                 <div class="col">
-                  <div class="card text-center">
+                  <div class="card text-center sponsor">
                     <img src="media/predictor.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">廠商名稱</h5>
@@ -252,7 +252,7 @@
                   </div>
                 </div>
                 <div class="col">
-                    <div class="card text-center">
+                    <div class="card text-center sponsor">
                       <img src="media/predictor.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">廠商名稱</h5>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card text-center">
+                    <div class="card text-center sponsor">
                       <img src="media/predictor.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">廠商名稱</h5>
@@ -268,7 +268,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card text-center">
+                    <div class="card text-center sponsor">
                       <img src="media/predictor.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">廠商名稱</h5>
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card text-center">
+                    <div class="card text-center sponsor">
                       <img src="media/predictor.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">廠商名稱</h5>
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card text-center">
+                    <div class="card text-center sponsor">
                       <img src="media/predictor.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">廠商名稱</h5>
