--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -102,7 +102,7 @@
         <!-- 活動 - OK 蹦 QRcode-->
 
         <div class="banner">
-            OK 蹦 QRcode 活動相關照片
+            <img src="../media/banner/act_QRcode.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
         </div>
         <div class="card">
             <div class="card-body">
@@ -121,7 +121,7 @@
         <!-- 活動 - 排行榜 -->
 
         <div class="banner">
-            排行榜活動相關照片
+            <img src="../media/banner/act_leaderboard.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
         </div>
         <div class="card">
             <div class="card-body">
