--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,7 +102,7 @@
         <!-- 主視覺 -->
         <div class="row">
             <div class="col banner">
-                Key Vision
+                <img src="../media/banner/about.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
             </div>
         </div>
         
@@ -111,8 +111,8 @@
             <div class="col-md-12">
                 <h1 class="header1">
                     元智大學 <br>
-                    資訊傳播學系第 26 屆 <br> 
-                    畢業展覽
+                    資訊傳播學系 <br> 
+                    第 26 屆畢業展覽
                 </h1>
             </div>
             <!-- 大標題下的介紹內文 -->
