--- a/views/news.ejs
+++ b/views/news.ejs
@@ -96,93 +96,65 @@
     </nav>
 
     <!--  -->
-    <div class="container">
-        <div class="card">
-            <div class="card-header">標題 1</div>
+    <div class="container margin_y">
+        <div class="card" data-bs-toggle="modal" data-bs-target="#news_content">
+            <div class="card-header header3_1">標題 1</div>
             <div class="card-body">
-                <!-- <h5 class="card-title">Special title treatment</h5> -->
-                <p class="card-text">
+                
+                <p class="card-text text3_2">
                     簡述內文1 簡述內文1 簡述內文1 簡述內文1 簡述內文1 
                     簡述內文1 簡述內文1 簡述內文1
                 </p>
-                <!-- <p class="placeholder-wave">
-                <span class="placeholder col-12"></span>
-                <span class="placeholder col-12"></span>
-              </p> -->
-
-                <!-- Button 了解詳情 -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
-                    了解詳情
-                </button>
+                
             </div>
             <div class="card-footer text-muted">
                 2023.04.01
             </div>
         </div>
 
-        <div class="card">
-            <div class="card-header">標題 2</div>
+        <div class="card" data-bs-toggle="modal" data-bs-target="#news_content">
+            <div class="card-header header3_1">標題 2</div>
             <div class="card-body">
-                <!-- <h5 class="card-title">Special title treatment</h5> -->
-                <p class="card-text">
+                
+                <p class="card-text text3_2">
                     簡述內文2 簡述內文2 簡述內文2 簡述內文2 簡述內文2 
                     簡述內文2 簡述內文2 簡述內文2
                 </p>
-                <!-- <p class="placeholder-wave">
-                <span class="placeholder col-12"></span>
-                <span class="placeholder col-12"></span>
-              </p> -->
 
-                <!-- Button 了解詳情 -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
-                    了解詳情
-                </button>
             </div>
             <div class="card-footer text-muted">
                 2023.03.11
             </div>
         </div>
 
-        <div class="card">
-            <div class="card-header">標題 3</div>
+        <div class="card" data-bs-toggle="modal" data-bs-target="#news_content">
+            <div class="card-header header3_1">標題 3</div>
             <div class="card-body">
-                <!-- <h5 class="card-title">Special title treatment</h5> -->
-                <p class="card-text">
+                
+                <p class="card-text text3_2">
                     簡述內文3 簡述內文3 簡述內文3 簡述內文3 簡述內文3 
                     簡述內文3 簡述內文3 簡述內文3
                 </p>
-                <!-- <p class="placeholder-wave">
-                <span class="placeholder col-12"></span>
-                <span class="placeholder col-12"></span>
-              </p> -->
 
-                <!-- Button 了解詳情 -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
-                    了解詳情
-                </button>
             </div>
             <div class="card-footer text-muted">
                 2023.02.25
             </div>
         </div>
 
-        <div class="card">
-            <div class="card-header">標題 4</div>
+        <div class="card" data-bs-toggle="modal" data-bs-target="#news_content">
+            <div class="card-header header3_1">標題 4</div>
             <div class="card-body">
-                <!-- <h5 class="card-title">Special title treatment</h5> -->
-                <p class="card-text">
+                
+                <p class="card-text text3_2">
                     簡述內文4 簡述內文4 簡述內文4 簡述內文4 簡述內文4
                     簡述內文4 簡述內文4 簡述內文4
                 </p>
-                <!-- <p class="placeholder-wave">
-                <span class="placeholder col-12"></span>
-                <span class="placeholder col-12"></span>
-              </p> -->
 
                 <!-- Button 了解詳情 -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
+                <!-- <button type="button" class="btn btn-outline-secondary text3_2" data-bs-toggle="modal" data-bs-target="#news_content">
                     了解詳情
-                </button>
+                </button> -->
             </div>
             <div class="card-footer text-muted">
                 2023.01.30
